--- a/sample/src/help/docs/app-developers-tutorials/es2016.md
+++ b/sample/src/help/docs/app-developers-tutorials/es2016.md
@@ -482,7 +482,7 @@ export class BasicUse {
 
 **grid.css**
 ```
-#grid .customer-photo {
+.customer-photo {
     display: inline-block;
     width: 32px;
     height: 32px;
@@ -495,7 +495,7 @@ export class BasicUse {
     margin-left: 5px;
 }
 
-#grid .customer-name {
+.customer-name {
     display: inline-block;
     vertical-align: middle;
     line-height: 32px;
